@@ -14,6 +14,7 @@ while (1) {
         for (i = 0; i < sys.size(ret); ++i) {
             sys.print(ret[i]);
         }
+        Pipe('send', 1);
     } fi
     sys.msleep(1000);
 }
